Align score and fix problem score for div 3

--- a/src/components/RankRow.css
+++ b/src/components/RankRow.css
@@ -60,3 +60,7 @@
 .rank-font{
     font-size: 80%;
 }
+
+.total-points{
+    padding: 0px 5px;
+}
